--- a/John ROMEO/Blog.html
+++ b/John ROMEO/Blog.html
@@ -225,14 +225,14 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/api/placeholder/400/300" alt="AI Chatbot" class="portfolio-image">
+                    <img src="Ai.jpg" alt="AI Chatbot" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>AI-Powered Customer Service</h3>
                         <p>An advanced AI chatbot and customer service platform that reduced response times by 60% and improved customer satisfaction.</p>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="/api/placeholder/400/300" alt="Blockchain Solution" class="portfolio-image">
+                    <img src="CHAIN.png" alt="Blockchain Solution" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>Blockchain Supply Chain</h3>
                         <p>A blockchain-based supply chain tracking system that increased transparency and reduced fraud for a global logistics company.</p>
