--- a/John ROMEO/index.html
+++ b/John ROMEO/index.html
@@ -180,15 +180,15 @@
                     <ul class="footer-contact">
                         <li>
                             <span class="contact-icon">📍</span>
-                            <span><p>📍 Accra, Ghana</p></span>
+                            <span><p> Accra, Ghana</p></span>
                         </li>
                         <li>
                             <span class="contact-icon">📞</span>
-                            <span> <a href="tel:+233 53 269 1145">📞 +233 53 269 1145</a></span>
+                            <span> <a href="tel:+233 53 269 1145"> +233 53 269 1145</a></span>
                         </li>
                         <li>
                             <span class="contact-icon">✉️</span>
-                            <span> <a href="mailto:info@nanotech.com">📧 info@nanotech.com</a></span>
+                            <span> <a href="mailto:info@nanotech.com">info@nanotech.com</a></span>
                         </li>
                         
                         
