--- a/John ROMEO/about us.html
+++ b/John ROMEO/about us.html
@@ -186,8 +186,10 @@
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     
-                    <p>123 Tech Avenue<br>Innovation District<br>San Francisco, CA 94105</p>
-                    <p>Phone: (555) 123-4567<br>Email: info@nanotech.com</p>
+                        <p>📍 Accra, Ghana</p>
+                        <a href="tel:+233 53 269 1145">📞 +233 53 269 1145</a>
+                    <a href="mailto:info@nanotech.com">📧 info@nanotech.com</a>
+                    
                 </div>
             </div>
             <div class="copyright">
