--- a/John ROMEO/about us.html
+++ b/John ROMEO/about us.html
@@ -185,10 +185,9 @@
                 </div>
                 <div class="footer-column">
                     <h3>Contact Us</h3>
-                    
-                        <p>📍 Accra, Ghana</p>
-                        <a href="tel:+233 53 269 1145">📞 +233 53 269 1145</a>
-                    <a href="mailto:info@nanotech.com">📧 info@nanotech.com</a>
+                    <div> <p>📍 Accra, Ghana</p></div>
+                    <div> <a href="tel:+233 53 269 1145">📞 +233 53 269 1145</a></div>
+                    <div><a href="mailto:info@nanotech.com">📧 info@nanotech.com</a></div>
                     
                 </div>
             </div>
