--- a/John ROMEO/about us.html
+++ b/John ROMEO/about us.html
@@ -187,7 +187,7 @@
                     <h3>Contact Us</h3>
                     <div> <p>📍 Accra, Ghana</p></div>
                     <div> <a href="tel:+233 53 269 1145">📞 +233 53 269 1145</a></div>
-                    <div><a href="mailto:info@nanotech.com">📧 info@nanotech.com</a></div>
+                    <div><p><a href="mailto:info@nanotech.com">📧 info@nanotech.com</a></p></div>
                     
                 </div>
             </div>
