--- a/John ROMEO/about us.html
+++ b/John ROMEO/about us.html
@@ -186,8 +186,8 @@
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     <div> <p>📍 Accra, Ghana</p></div>
-                    <div> <a href="tel:+233 53 269 1145">📞 +233 53 269 1145</a></div>
-                    <div><p><a href="mailto:info@nanotech.com">📧 info@nanotech.com</a></p></div>
+                    <div><p> <a href="tel:+233 53 269 1145"> 📞 +233 53 269 1145 </a></p></div>
+                    <div><p><a href="mailto:info@nanotech.com"> 📧 info@nanotech.com </a></p></div>
                     
                 </div>
             </div>
