--- a/John ROMEO/contact us.html
+++ b/John ROMEO/contact us.html
@@ -238,15 +238,15 @@
                     <ul class="footer-contact">
                         <li>
                             <div class="footer-contact-icon">📍</div>
-                            <div>123 Tech Park, Innovation District<br>San Francisco, CA 94103</div>
+                            <div>Accra, Ghana</div>
                         </li>
                         <li>
                             <div class="footer-contact-icon">📞</div>
-                            <div>+1 (555) 123-4567</div>
+                            <div><a href="tel:+233 53 269 1145">  +233 53 269 1145 </a></div>
                         </li>
                         <li>
                             <div class="footer-contact-icon">✉️</div>
-                            <div>hello@techfusion.com</div>
+                            <div><a href="mailto:info@nanotech.com"> 📧 info@nanotech.com </a></div>
                         </li>
                     </ul>
                 </div>
